<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/dark">

       <LinearLayout
           android:orientation="vertical"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_alignParentTop="true"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sweep"
                android:id="@+id/textView3"
                android:gravity="center"
                android:background="@color/orange"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sweep"
                android:id="@+id/textView"
                android:textColor="@color/white"
                android:layout_row="0"
                android:paddingTop="18dp"
                android:layout_column="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="Ping Sweep"
                android:id="@+id/button"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="pingHost"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/wifi"
                android:id="@+id/tvWifiInfo"
                android:textColor="@color/white"
                android:paddingTop="18dp"
                android:layout_row="2"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/output"
                android:id="@+id/tvOutput"
                android:textColor="@color/white"
                android:layout_row="3"
                android:layout_column="0" />
        </LinearLayout>
</RelativeLayout>
